# shape-defense

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  ent.fs  ent.vs  grid.fs  grid.vs  profile.sh  sdl_errors.supp
cmake/: FindFreeType2.cmake  FindGLEW.cmake
shaders/: background.fs  background.vs  effect.fs  effect.vs  ent.fs  ent.vs  gui.fs  gui.vs  text.fs
src/: Game.cpp  Game.hpp  Graphics.cpp  Graphics.hpp  MY.hpp  TdGame.cpp  TdGame.hpp  TrGraphics.cpp  Utils.hpp  defense.cpp
src/ECS/: Entity.cpp  Entity.hpp  EntityType.hpp
src/ECS/Components/: Attack.cpp  Attack.hpp  Graphics.cpp  Graphics.hpp  Health.cpp  Health.hpp  LaserShooter.cpp  LaserShooter.hpp  Pathing.cpp  Pathing.hpp  Physics.cpp  Physics.hpp  Shape.hpp
src/ECS/Systems/: GraphicsSystem.cpp  GraphicsSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlanningSystem.cpp  PlanningSystem.hpp  Rect.cpp  Rect.hpp  System.cpp  System.hpp  SystemPosUtils.hpp  SystemUtils.cpp  SystemUtils.hpp
src/GUI/: GUIEntity.hpp
src/GUI/Components/: GUIClickableComponent.cpp  GUIClickableComponent.hpp  GUIDropdownComponent.cpp  GUIDropdownComponent.hpp  GUIGraphicsComponent.cpp  GUIHighlightComponent.cpp  GUIMouseComponent.cpp  GUITextComponent.cpp  GUITextComponent.hpp
src/GUI/Systems/: GUIGraphicsSystem.hpp  GUIMouseInputSystem.hpp  GUIResponsiveSystem.hpp  GUISystem.hpp
src/RenderLoop/: GameLoop.cpp  GameLoop.hpp  MainMenuLoop.cpp  MainMenuLoop.hpp  RenderLoop.hpp
src/TdECS/: Entity.cpp  Entity.hpp  EntityType.cpp  EntityType.hpp  TdECSEntity.cpp  TdECSEntity.hpp
src/TdECS/TdECSComponents/: Attack.cpp  Attack.hpp  Component.cpp  Component.hpp  Fighter.cpp  Fighter.hpp  Graphics.cpp  Graphics.hpp  Health.cpp  Health.hpp  LaserShooter.cpp  LaserShooter.hpp  Pathing.cpp  Pathing.hpp  Physics.cpp  Physics.hpp  Position.cpp  Position.hpp  Shape.cpp  Shape.hpp  Shooter.cpp  Shooter.hpp  TdECSAttackComponent.cpp  TdECSAttackComponent.hpp  TdECSComponent.cpp  TdECSComponent.hpp  TdECSFighterComponent.cpp  TdECSFighterComponent.hpp  TdECSGraphicsComponent.cpp  TdECSGraphicsComponent.hpp  TdECSHealthComponent.cpp  TdECSHealthComponent.hpp  TdECSLaserShooterComponent.cpp  TdECSLaserShooterComponent.hpp  TdECSPathingComponent.cpp  TdECSPathingComponent.hpp  TdECSPhysicsComponent.cpp  TdECSPhysicsComponent.hpp  TdECSPositionComponent.cpp  TdECSPositionComponent.hpp  (+8 more)
src/TdECS/TdECSSystems/: CollisionSystem.cpp  CollisionSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  HealthSystem.cpp  HealthSystem.hpp  (+28 more)
src/TdGUI/: GUIEntity.hpp  TdGUIEntity.hpp
src/TdManagers/: CollisionSystem.cpp  ConstructionManager.cpp  ConstructionManager.hpp  HeatMapManager.cpp  HeatMapManager.hpp  LevelManager.cpp  LevelManager.hpp  TdConstructionManager.cpp  TdConstructionManager.hpp
src/TdRenderLoop/: GameLoop.cpp  GameLoop.hpp  MainMenuLoop.cpp  MainMenuLoop.hpp  RenderLoop.hpp  TdGameLoop.cpp  TdGameLoop.hpp  TdMainMenuLoop.cpp  TdMainMenuLoop.hpp  TdRenderLoop.hpp  TdTransitionLoop.cpp  TdTransitionLoop.hpp  TransitionLoop.cpp  TransitionLoop.hpp
src/common/: CircularBuffer.cpp  CircularBuffer.hpp
src/graphics/: GraphicsBackend.cpp  GraphicsBackend.hpp
(+46 files in other folders)
